@@ -1,3 +1,6 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -6.1.3-0
+- Add v2 compliance_markup data
+
 * Mon Apr 01 2019 Jim Anderson <thesemicolons@protonmail.com> - 6.1.2-0
 - Moved code for setting chroot directory from manifests/params.pp into data in
   modules
